# signed-decimal64

./: Cargo.toml  README.md
benches/: add_sub.rs  mul_div.rs  rescale.rs  round.rs  serde_json.rs
src/: arithmetic.rs  error.rs  lib.rs  macros.rs  round.rs  serde.rs
tests/: coverage.rs  serde_binary.rs  smoke.rs
